# ChatBotZerg

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/style/style_qss/: design.qss
